Run in the background (#209)

--- a/src/meson.build
+++ b/src/meson.build
@@ -31,7 +31,8 @@ custom_target('gjspack',
     gjspack,
     '--appid=' + app_id,
     '--prefix', '/re/sonny/Junction',
-    '--project-root', meson.source_root(),
+    '--import-map',  meson.project_source_root() / 'src/importmap.json',
+    '--project-root', meson.project_source_root(),
     '--resource-root', meson.project_source_root() / 'src',
     '--no-executable',
     '@INPUT0@',
