--- a/data/re.sonny.Junction.service
+++ b/data/re.sonny.Junction.service
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=re.sonny.Junction
-Exec=@bindir@/re.sonny.Junction --gapplication-service
+Exec=@bindir@/junction --gapplication-service
